syntax = "proto3";

package memo.model;

message OperationStatus {
    enum Status {
        SUCCESS = 0;
        WARNING = 1;
        FAILURE = 2;
    }
    Status status = 1;
    int32  code = 2;
    string comment = 3;
}
